--- a/index.css
+++ b/index.css
@@ -15,7 +15,6 @@ body {
 /* NAV BAR */
 
 nav {
-    border: 1px solid black;
     grid-row: 1 / 4;
     display: flex;
     flex-direction: column;
@@ -55,7 +54,6 @@ li {
 /* HEADER */
 
 header {
-    border: 1px solid black;
     grid-column: 2 / 3;
     display: grid;
     grid-template-rows: 1fr 1fr;
@@ -154,7 +152,7 @@ header {
     padding: 20px;
     border-radius: 20px;
     border: none;
-    width: 18%;
+    width: 20%;
     background-color: dodgerblue;
     color: white;
     font-weight: bolder;
@@ -163,5 +161,142 @@ header {
 }
 /* MAIN */
 
+main {
+    background-color: lightgray;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+}
 
+#main-box {
+    display: flex;
+    flex-direction: column;
+}
+
+#main-title-one {
+    margin: 20px;
+
+}
+
+#box-container {
+    
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    margin: 15px;
+}
+
+.box {
+    border-radius: 10px;
+    width: 400px;
+    height: 200px;
+    padding: 10px;
+    border-left: 10px solid rgb(225, 154, 22);
+    background-color: white;
+}
+
+.main-box-title {
+    font-weight: bolder;
+}
+
+/* SIDE BOX */
+
+#side-box {
+    border: 1px solid darkred;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    justify-content: space-between;
+}
+
+.box-txt {
+    border: 1px solid red;
+}
+
+.box-btn {
+    border: 1px solid blue;
+}
+
+/* BOX TOP */
+
+#main-title-two {
+    border: 1px solid black;
+}
+
+#side-top {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    height: 45%;
+}
+
+#side-box-one {
+    border: 1px solid red;
+}
+
+#top-box-container {
+    padding: 20px;
+    background-color: white;
+    height: 100%;
+    border: 20px;
+    border: 1px solid black;
+    padding: 35px;
+}
+
+.txt-title {
+    font-weight: bold;
+    line-height: 2em;
+}
+
+.txt-p {
+    color: gray;
+}
+
+#txt-one {
+    padding: 10px;
+    border-bottom: 1px solid grey;
+}
+
+#txt-two {
+    padding: 10px;
+    border-bottom: 1px solid grey;
+}
+
+#txt-three {
+    padding: 10px;
+}
+
+
+/* SIDE BOTTOM BOX */
+
+#main-title-three {
+    border: 1px solid black;
+}
+
+#side-bottom {
+    border: 1px solid green;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    height: 45%;
+}
+
+#main-title-two {
+    margin: 0px;
+}
+
+#side-box-bottom {
+    background-color: white;
+    padding: 20px;
+    height: 100%;
+    border-radius: 20px;
+}
  
+#side-box-bottom {
+    border: 1px solid red;
+}
+
+.boxes-bottom {
+    border: 1px solid black;
+    width: 100%;
+    
+}
